Write signatures into the PDF so anyone can verify them
Signing produced real cryptography — RSA-2048, SHA-256, X.509 — and then
recorded it in the database, leaving the file untouched. The document
opened in Acrobat showing no signature at all, and a recipient outside
this application had nothing to check. A signature that cannot travel
with the document does not do the job signatures exist for.

PdfSignatureEmbedder writes a detached PKCS#7 signature into the PDF as
an incremental update, so the original bytes are preserved and the
/ByteRange covers the whole file except the signature container. The
result carries /FT /Sig, /Adobe.PPKLite, /adbe.pkcs7.detached and
/SigFlags 3 — what any conforming reader looks for. Verification reads
the signature back out of the document; signatures taken before this
existed fall back to the stored record.

Signing commits a version of its own, because a PDF signature protects
the file it lives in: the bytes being attested to are the bytes that now
include the container. That keeps the existing guarantee intact — later
processing moves the head, and the signature still verifies against the
version it covers.

Signing logic moved out of the controller into DocumentSigningService.
The controller was building certificates, reading files, assembling
records and setting document status in one method; it now delegates and
maps to HTTP.

Non-PDF documents cannot carry a signature dictionary. They keep the
detached record and the response says embedded=false, rather than
implying a portability they do not have.

Two test fixtures wrote text files named .pdf. That passed while signing
never opened the file; now that it does, they build real PDFs.

Tests: 6 for embedding — including that the original bytes survive, that
tampering is detected, that an unsigned document reports no signature
rather than an invalid one, and that countersigning works (131 backend).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://c